--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="w-3 h-3 bg-red-500 rounded-full animate-pulse"></span>
                     <span class="text-[10px] font-bold">HARDWARE SERPRO: OFFLINE</span>
                 </div>
-                <span class="text-[10px] opacity-60">LICENÇA: MIT_ISR_BR_2026</span>
+                <span class="text-[10px] opacity-60">LICENÇA: MIT_ISR_BR</span>
             </div>
         </header>
 
@@ -49,7 +49,7 @@
                 <div class="israel-hud p-8 rounded-lg border-l-8 border-blue-700">
                     <div class="flex justify-between items-center mb-6 border-b pb-4">
                         <h2 class="font-black text-blue-900 uppercase tracking-tighter">Faturação de Alta Autoridade</h2>
-                        <span class="status-badge bg-blue-100 text-blue-700">Reforma Tributária 2026</span>
+                        <span class="status-badge bg-blue-100 text-blue-700">Reforma Tributária</span>
                     </div>
 
                     <div class="grid grid-cols-6 gap-4">
@@ -90,11 +90,11 @@
                     <h3 class="text-xs font-black text-slate-400 uppercase mb-4 tracking-widest">Painel Tributário (Lei 2026)</h3>
                     <div class="space-y-4">
                         <div class="flex justify-between items-center">
-                            <span class="text-xs font-bold">CBS (Federal) <small class="text-slate-400">8.8%</small></span>
+                            <span class="text-xs font-bold">CBS (Federal) <small class="text-slate-400">0.9%</small></span>
                             <span id="cbsVal" class="font-mono text-sm">R$ 0,00</span>
                         </div>
                         <div class="flex justify-between items-center">
-                            <span class="text-xs font-bold">IBS (Est./Mun.) <small class="text-slate-400">17.7%</small></span>
+                            <span class="text-xs font-bold">IBS (Est./Mun.) <small class="text-slate-400">0.1%</small></span>
                             <span id="ibsVal" class="font-mono text-sm">R$ 0,00</span>
                         </div>
                         <div class="flex justify-between items-center border-t pt-4">
@@ -128,9 +128,9 @@
     <script>
         function motorFiscal() {
             const bruto = parseFloat(document.getElementById('prodValor').value) || 0;
-            const cbs = bruto * 0.088;
-            const ibs = bruto * 0.177;
-            const liquido = bruto - (cbs + ibs);
+            const cbs = bruto * 0.9;
+            const ibs = bruto * 0.1;
+            const liquido = bruto - (cbs + ibs)=IVA;
 
             document.getElementById('cbsVal').innerText = `R$ ${cbs.toFixed(2)}`;
             document.getElementById('ibsVal').innerText = `R$ ${ibs.toFixed(2)}`;
