--- a/index.html
+++ b/index.html
@@ -156,6 +156,10 @@
                 <div class="panel-3d p-8 border-t-8 border-orange-500">
                     <h3 class="text-[12px] font-black text-center text-slate-400 uppercase mb-8 tracking-[0.2em]">Detalhamento Tributário</h3>
                     
+                  <div class="col-span-12 lg:col-span-4 space-y-6">
+                <div class="panel-3d p-8 border-t-8 border-orange-500">
+                    <h3 class="text-[12px] font-black text-center text-slate-400 uppercase mb-8 tracking-[0.2em]">Detalhamento Tributário</h3>
+                    
                     <div class="space-y-6 bg-orange-50/50 p-6 rounded-2xl border border-orange-100 shadow-inner">
                         <div class="flex justify-between items-center">
                             <span class="font-black text-slate-500 uppercase text-[11px]">CBS (FEDERAL) 0.9%:</span>
