--- a/index.html
+++ b/index.html
@@ -103,10 +103,10 @@
             <div class="flex items-center gap-8">
                 <div class="v12-logo-3d">V12</div>
                 <div>
-                    <h1 class="text-2xl font-black tracking-tighter uppercase text-slate-800">Sentinela <span class="text-orange-600">Authority</span></h1>
+                    <h1 class="text-2xl font-black tracking-tighter uppercase text-slate-800">Sentinela <span class="text-orange-600">IHVH</span></h1>
                     <div class="flex items-center gap-2">
-                        <span class="text-[9px] font-black bg-slate-800 text-white px-2 py-0.5 rounded">MIT STANDARD</span>
-                        <span class="text-[9px] font-black bg-orange-100 text-orange-700 px-2 py-0.5 rounded italic">VISION AI READY</span>
+                        <span class="text-[9px] font-black bg-slate-800 text-white px-2 py-0.5 rounded">M.I.T</span>
+                        <span class="text-[9px] font-black bg-orange-100 text-orange-700 px-2 py-0.5 rounded italic">VISION AI</span>
                     </div>
                 </div>
             </div>
