--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/1162/1162456.png">
     <title>SENTINELA V12 | COMMAND INTERFACE</title>
     
@@ -86,35 +86,6 @@
             padding: 5px;
             transform: skewX(-5deg);
             margin-bottom: 15px;
-        }
-
-        @media (max-width: 768px) {
-            main { 
-                display: flex; 
-                flex-direction: column; 
-                padding: 15px !important;
-                padding-bottom: 340px !important;
-            }
-            .col-span-12.lg\:col-span-8 { order: 1; }
-            .col-span-12.lg\:col-span-4 {
-                order: 3;
-                position: fixed;
-                bottom: 0; left: 0; right: 0;
-                z-index: 999;
-                background: white;
-                padding: 10px !important;
-                border-top: 5px solid var(--active-orange);
-                border-radius: 25px 25px 0 0;
-                box-shadow: 0 -10px 30px rgba(0,0,0,0.2);
-            }
-            .terminal-log { order: 2; margin-top: 20px; margin-bottom: 20px; }
-            .mt-10.space-y-4 {
-                display: grid;
-                grid-template-columns: 1fr 1fr;
-                gap: 10px;
-                margin-top: 15px !important;
-            }
-            .btn-orange { grid-column: span 2; padding: 12px !important; }
         }
 
         @media print { 
@@ -270,8 +241,8 @@
             const valor = document.getElementById('valorInput').value;
             if(!valor || valor == 0) return alert("Insira um valor para cobrar.");
             const valorEmCentavos = Math.round(parseFloat(valor) * 100);
-            addLog(`BRIDGE P2: Invocando Hardware... R$ ${valor}`);
-            const intentUrl = `intent://payment?amount=${valorEmCentavos}&editable_amount=false#Intent;scheme=infinitepay;package=com.infinitepay.checkout;S.browser_fallback_url=${window.location.href};end`;
+            addLog(`Invocando Hardware de Pagamento... R$ ${valor}`);
+            const intentUrl = `intent://pay?amount=${valorEmCentavos}&currency=BRL#Intent;scheme=infinitepay;package=com.infinitepay.checkout;S.browser_fallback_url=${window.location.href};end`;
             window.location.href = intentUrl;
         }
 
@@ -279,6 +250,7 @@
             const readerDiv = document.getElementById('reader');
             const btn = document.getElementById('btnScanner');
             if (!html5QrCode) { html5QrCode = new Html5Qrcode("reader"); }
+
             if (readerDiv.style.display === 'none' || readerDiv.style.display === '') {
                 readerDiv.style.display = 'block';
                 btn.innerText = "FECHAR CÂMERA (X)";
@@ -308,6 +280,7 @@
                     readerDiv.style.display = 'none';
                     btn.innerText = "Bipar Produto (Câmera)";
                     btn.classList.replace('bg-red-600', 'bg-slate-800');
+                    addLog("Câmera encerrada. Dados preservados.");
                 } catch (err) { readerDiv.style.display = 'none'; }
             }
         }
@@ -361,6 +334,10 @@
             const vTotal = parseFloat(valor) || 0;
             const dataHora = new Date().toLocaleString('pt-BR');
 
+            // Cálculos Tributários Proporcionais
+            const cbs = vTotal * 0.009;
+            const ibs = vTotal * 0.001;
+
             if(!nome || !valor) return alert("Erro: Preencha Nome e Valor.");
 
             const printArea = document.getElementById('print-area');
@@ -379,71 +356,102 @@
                         <p>-------------------------------</p>
                         <h1 style="text-align:right; font-size:22px;">TOTAL: R$ ${vTotal.toFixed(2)}</h1>
                         <p style="font-size:8px; text-align:center; margin-top:20px;">KEY: ${ACCESS_KEY}</p>
-                    </div>`;
+                    </div>
+                `;
             } else {
-                // LAYOUT A4 DETALHADO RESTAURADO (DANFE PREMIUM)
+                // NOVO LAYOUT A4 PREMIUM - SEM MEXER NA INFRA DO SISTEMA
                 printArea.innerHTML = `
-                <div style="font-family: 'JetBrains Mono', monospace; padding: 30px; color: #000; background: #fff; max-width: 800px; margin: auto;">
-                    <div style="display: flex; justify-content: space-between; border-bottom: 5px solid #000; padding-bottom: 15px; margin-bottom: 20px;">
-                        <div>
-                            <h1 style="font-size: 42px; margin: 0; font-weight: 900; letter-spacing: -2px;">SENTINELA V12</h1>
-                            <p style="margin: 0; font-size: 13px; font-weight: bold; text-transform: uppercase;">Sistema de Gestão e Autoridade v12.0.1</p>
-                        </div>
-                        <div style="text-align: right; border: 3px solid #000; padding: 10px 20px;">
-                            <p style="margin: 0; font-size: 11px; font-weight: bold;">DOC. AUXILIAR DE VENDA (DANFE)</p>
-                            <p style="margin: 0; font-size: 20px; font-weight: 900;">Nº ${Math.floor(Math.random() * 900000 + 100000)}</p>
-                        </div>
-                    </div>
-
-                    <div style="display: grid; grid-template-columns: 1.5fr 1fr; gap: 20px; margin-bottom: 20px;">
-                        <div style="border: 2px solid #000; padding: 15px;">
-                            <p style="margin: 0 0 10px 0; font-size: 11px; border-bottom: 1px solid #000; font-weight: 900; text-transform: uppercase;">Identificação do Cliente</p>
-                            <p style="margin: 3px 0; font-size: 14px;"><b>NOME:</b> ${nome.toUpperCase()}</p>
-                            <p style="margin: 3px 0; font-size: 14px;"><b>CPF/CNPJ:</b> ${doc}</p>
-                            <p style="margin: 3px 0; font-size: 14px;"><b>CONTATO:</b> ${tel}</p>
-                            <p style="margin: 3px 0; font-size: 14px;"><b>E-MAIL:</b> ${email}</p>
-                        </div>
-                        <div style="border: 2px solid #000; padding: 15px; text-align: center;">
-                            <p style="margin: 0 0 10px 0; font-size: 11px; border-bottom: 1px solid #000; font-weight: 900; text-transform: uppercase;">Emissão</p>
-                            <p style="margin: 5px 0; font-size: 22px; font-weight: 900;">${dataHora.split(',')[0]}</p>
-                            <p style="margin: 0; font-size: 14px;">HORA: ${dataHora.split(',')[1]}</p>
-                        </div>
-                    </div>
-
-                    <table style="width: 100%; border-collapse: collapse; margin-bottom: 30px;">
-                        <thead>
-                            <tr style="background: #000; color: #fff;">
-                                <th align="left" style="padding: 10px; font-size: 12px; text-transform: uppercase;">Cód</th>
-                                <th align="left" style="padding: 10px; font-size: 12px; text-transform: uppercase;">Descrição dos Produtos</th>
-                                <th align="center" style="padding: 10px; font-size: 12px; text-transform: uppercase;">Qtd</th>
-                                <th align="right" style="padding: 10px; font-size: 12px; text-transform: uppercase;">Total</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            ${desc.split('\n').filter(l => l.trim() !== "").map((line, idx) => `
-                                <tr style="border-bottom: 2px solid #000;">
-                                    <td style="font-size: 13px; padding: 12px;">00${idx + 1}</td>
-                                    <td style="font-size: 13px; padding: 12px; font-weight: bold;">${line}</td>
-                                    <td align="center" style="font-size: 13px; padding: 12px;">1</td>
-                                    <td align="right" style="font-size: 13px; padding: 12px;">---</td>
-                                </tr>
-                            `).join('')}
-                        </tbody>
-                    </table>
-
-                    <div style="display: flex; justify-content: flex-end;">
-                        <div style="width: 400px; border: 4px solid #000; padding: 15px; text-align: right;">
-                            <div style="display: flex; justify-content: space-between; font-weight: 900; font-size: 36px;">
-                                <span>TOTAL:</span>
-                                <span>R$ ${vTotal.toFixed(2)}</span>
+                    <div style="font-family: 'JetBrains Mono', monospace; padding: 40px; color: #000; background: #fff;">
+                        <div style="display: flex; justify-content: space-between; border-bottom: 4px solid #000; padding-bottom: 10px;">
+                            <div>
+                                <h1 style="font-size: 38px; margin: 0; font-weight: 900; letter-spacing: -2px;">SENTINELA V12</h1>
+                                <p style="margin: 0; font-size: 12px; font-weight: bold;">SISTEMA DE GESTÃO E AUTORIDADE V12.0.1</p>
+                            </div>
+                            <div style="text-align: right;">
+                                <div style="border: 2px solid #000; padding: 5px 15px;">
+                                    <p style="margin: 0; font-size: 10px;">DOC. AUXILIAR DE VENDA (DANFE)</p>
+                                    <p style="margin: 0; font-weight: bold;">Nº ${Math.floor(Math.random() * 999999)}</p>
+                                </div>
                             </div>
                         </div>
-                    </div>
 
-                    <div style="margin-top: 50px; text-align: center; border-top: 1px dashed #000; padding-top: 20px;">
-                        <p style="font-size: 10px; font-weight: bold;">CHAVE DE AUTENTICAÇÃO: ${ACCESS_KEY}</p>
+                        <div style="margin-top: 20px; display: grid; grid-template-columns: 2fr 1fr; gap: 20px;">
+                            <div style="border: 1px solid #000; padding: 10px;">
+                                <p style="margin: 0; font-size: 10px; border-bottom: 1px solid #ddd; margin-bottom: 5px;">IDENTIFICAÇÃO DO CLIENTE</p>
+                                <p style="margin: 0;"><b>NOME:</b> ${nome.toUpperCase()}</p>
+                                <p style="margin: 0;"><b>CPF/CNPJ:</b> ${doc}</p>
+                                <p style="margin: 0;"><b>CONTATO:</b> ${tel} | ${email}</p>
+                            </div>
+                            <div style="border: 1px solid #000; padding: 10px; text-align: center;">
+                                <p style="margin: 0; font-size: 10px; border-bottom: 1px solid #ddd; margin-bottom: 5px;">EMISSÃO</p>
+                                <p style="margin: 0; font-size: 18px; font-weight: bold;">${dataHora.split(',')[0]}</p>
+                                <p style="margin: 0; font-size: 12px;">HORA: ${dataHora.split(',')[1]}</p>
+                            </div>
+                        </div>
+
+                        <table style="width: 100%; margin-top: 20px; border-collapse: collapse;">
+                            <thead>
+                                <tr style="background: #000; color: #fff;">
+                                    <th align="left" style="padding: 5px; font-size: 12px;">CÓD</th>
+                                    <th align="left" style="padding: 5px; font-size: 12px;">DESCRIÇÃO DOS PRODUTOS / SERVIÇOS</th>
+                                    <th align="center" style="padding: 5px; font-size: 12px;">QTD</th>
+                                    <th align="right" style="padding: 5px; font-size: 12px;">V.UNIT</th>
+                                    <th align="right" style="padding: 5px; font-size: 12px;">TOTAL</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                ${desc.split('\n').filter(l => l.trim() !== "").map((line, idx) => `
+                                    <tr style="border-bottom: 1px solid #000;">
+                                        <td style="font-size: 12px; padding: 8px;">00${idx + 1}</td>
+                                        <td style="font-size: 12px; padding: 8px;">${line}</td>
+                                        <td align="center" style="font-size: 12px; padding: 8px;">1</td>
+                                        <td align="right" style="font-size: 12px; padding: 8px;">--</td>
+                                        <td align="right" style="font-size: 12px; padding: 8px;">--</td>
+                                    </tr>
+                                `).join('')}
+                            </tbody>
+                        </table>
+
+                        <div style="margin-top: 20px; display: flex; justify-content: flex-end;">
+                            <div style="width: 350px;">
+                                <div style="display: flex; justify-content: space-between; font-size: 12px; padding: 2px 0;">
+                                    <span>SUBTOTAL DOS ITENS:</span>
+                                    <span>R$ ${vTotal.toFixed(2)}</span>
+                                </div>
+                                <div style="display: flex; justify-content: space-between; font-size: 11px; color: #444;">
+                                    <span>TRIBUTOS FEDERAIS (CBS 0.9%):</span>
+                                    <span>R$ ${cbs.toFixed(2)}</span>
+                                </div>
+                                <div style="display: flex; justify-content: space-between; font-size: 11px; color: #444; border-bottom: 1px solid #000; padding-bottom: 5px;">
+                                    <span>TRIBUTOS EST./MUN. (IBS 0.1%):</span>
+                                    <span>R$ ${ibs.toFixed(2)}</span>
+                                </div>
+                                <div style="display: flex; justify-content: space-between; font-weight: 900; font-size: 32px; padding-top: 10px;">
+                                    <span>TOTAL:</span>
+                                    <span>R$ ${vTotal.toFixed(2)}</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div style="margin-top: 80px; display: grid; grid-template-columns: 1fr 1fr; gap: 50px;">
+                            <div style="text-align: center;">
+                                <div style="border-top: 1px solid #000; margin-bottom: 5px;"></div>
+                                <p style="margin: 0; font-size: 10px; font-weight: bold;">ASSINATURA DO CLIENTE</p>
+                                <p style="margin: 0; font-size: 9px;">DECLARO O RECEBIMENTO DOS ITENS ACIMA</p>
+                            </div>
+                            <div style="text-align: center;">
+                                <div style="border-top: 1px solid #000; margin-bottom: 5px;"></div>
+                                <p style="margin: 0; font-size: 10px; font-weight: bold;">CHAVE DE AUTORIDADE V12</p>
+                                <p style="margin: 0; font-size: 9px;">${ACCESS_KEY}</p>
+                            </div>
+                        </div>
+
+                        <div style="margin-top: 50px; font-size: 8px; color: #666; text-align: center; border-top: 1px dashed #ccc; padding-top: 10px;">
+                            DOCUMENTO GERADO VIA HARDWARE SMART POS P2 [SERIAL: ${SERIAL_P2}]<br>
+                            SENTINELA V12 - SISTEMA SÍNCRONO DE ALTA AUTORIDADE
+                        </div>
                     </div>
-                </div>`;
+                `;
             }
             window.print();
         }
