--- a/index.html
+++ b/index.html
@@ -100,13 +100,17 @@
 </head>
 <body>
 
-    <div id="auth-gate" class="no-print">
-        <div class="bg-white p-10 rounded-3xl shadow-2xl w-[400px] text-center">
-            <div class="v12-logo-3d inline-block mb-6">V12</div>
-            <h2 class="text-2xl font-black text-slate-800 uppercase italic mb-6">Acesso de Autoridade</h2>
-            <input type="password" id="v12_key" placeholder="CHAVE CRIPTOGRÁFICA" class="input-tactical w-full mb-4 text-center">
-            <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-black py-4 rounded-xl uppercase tracking-widest text-xs">Acessar Sentinela</button>
-        </div>
+  <div id="auth-gate" class="no-print">
+        <div class="bg-white p-12 rounded-[40px] shadow-2xl w-[450px] text-center border-b-8 border-orange-600">
+            <div class="v12-logo-3d inline-block mb-8">V12</div>
+            <h2 class="text-3xl font-black text-slate-800 uppercase italic mb-2 tracking-tighter">Acesso de Autoridade</h2>
+            <p class="text-slate-400 text-xs font-bold mb-10 tracking-widest uppercase">P2 Hardware Authentication Required</p>
+            
+            <div class="space-y-4">
+                <input type="email" id="v12_email" placeholder="E-mail de Comando" class="input-tactical w-full">
+                <input type="password" id="v12_pass" placeholder="Chave Criptográfica" class="input-tactical w-full">
+                <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-black py-5 rounded-2xl shadow-xl uppercase tracking-widest text-sm">Iniciar Sincronização</button>
+            </div>
     </div>
 
     <div class="no-print">
