--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                         </div>
                         <div>
                             <p class="text-[10px] font-black text-orange-400 uppercase tracking-widest">Alinhamento Estratégico</p>
-                            <p id="ai-insight" class="text-white text-xs font-medium italic">Análise de autoridade...</p>
+                            <p id="ai-insight" class="text-white text-xs font-medium italic">Análise de autoridade</p>
                         </div>
                     </div>
                     <div class="text-right">
@@ -297,7 +297,7 @@
             if(email.length > 5 && pass === "ihvh2026") {
                 document.getElementById('auth-gate').style.display = 'none';
                 addLog(`ACESSO AUTORIZADO: ${email.toUpperCase()}`);
-                generateAIInsight("Sincronização completa. Hardware Sentinela pronto para operação.");
+                generateAIInsight("Sincronização completa.");
             } else { 
                 alert("ACESSO NEGADO: Verifique sua chave V12."); 
             }
