--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                             <label class="text-[11px] font-black text-slate-400 uppercase mb-2 block tracking-widest">Descrição / Itens</label>
                             <textarea id="descInput" class="input-tactical w-full h-32 font-normal text-slate-600" placeholder="Itens bipados ou descrição manual..."></textarea>
                         </div>
-                    </div>                    
+                    </div>                        
                 </div>                         
                 
                 <div class="terminal-log shadow-xl">
@@ -273,18 +273,16 @@
                         <div class="w-full bg-slate-800 h-1 rounded-full overflow-hidden">
                             <div class="bg-orange-500 h-full w-[92%]"></div>
                         </div>
-                        <div class="panel-3d p-6 bg-slate-900 border-none">
-                    <h3 class="text-[10px] font-black text-orange-500 uppercase mb-4 tracking-widest">Monitoramento</h3>
-                    <div class="space-y-3">
                         <div class="flex justify-between text-[10px] font-mono">
                             <span class="text-slate-400">GEO-POLITICA:</span>
                             <span class="text-orange-400 font-bold">HIGH</span>
                         </div>
-                        <div class="terminal-log shadow-xl">
-                    <div class="flex justify-between border-b border-white/5 pb-2 mb-3">
-                        <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI Advisor</span>
-                        <span class="text-[10px] text-slate-500 font-mono">NODE_ISR_V12</span>
-                    </div>
+                        <div class="terminal-log shadow-xl mt-4">
+                            <div class="flex justify-between border-b border-white/5 pb-2 mb-3">
+                                <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI Advisor</span>
+                                <span class="text-[10px] text-slate-500 font-mono">NODE_ISR_V12</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -381,7 +379,7 @@
             const v = parseFloat(document.getElementById('valorInput').value) || 0;
             document.getElementById('cbsVal').innerText = `R$ ${(v * 0.009).toFixed(2)}`;
             document.getElementById('ibsVal').innerText = `R$ ${(v * 0.001).toFixed(2)}`;
-            document.getElementById('liqVal').innerText = `R$ v.toFixed(2)`;
+            document.getElementById('liqVal').innerText = `R$ ${v.toFixed(2)}`;
         }
 
         function addLog(msg) {
@@ -399,10 +397,9 @@
     const dataHora = new Date().toLocaleString('pt-BR');
     const authCode = Math.random().toString(36).toUpperCase().substring(2, 12);
 
-    // Cálculos de Impostos Detalhados (Padrão IBPT)
     const vTotal = parseFloat(valor) || 0;
-    const fed = vTotal * 0.1345; // 13.45% estimativa federal
-    const est = vTotal * 0.1200; // 12.00% estimativa estadual
+    const fed = vTotal * 0.1345;
+    const est = vTotal * 0.1200;
     const totalImpostos = fed + est;
 
     const printArea = document.getElementById('print-area');
@@ -445,7 +442,6 @@
             </div>
         `;
     } else {
-        // MODELO A4 COM ESTRUTURA DE NOTA DE MERCADO E ASSINATURAS
         printArea.innerHTML = `
             <div style="font-family: 'JetBrains Mono', monospace; padding: 40px; border: 1px solid #ddd; background: #fff; position: relative;">
                 <div style="display: flex; justify-content: space-between; align-items: flex-start; border-bottom: 4px solid #000; padding-bottom: 20px;">
@@ -460,7 +456,7 @@
                     </div>
                 </div>
 
-                <div style="margin-top: 30px; background: #f4f4f4; padding: 15px; border-radius: 5px; display: grid; grid-template-cols: 1fr 1fr;">
+                <div style="margin-top: 30px; background: #f4f4f4; padding: 15px; border-radius: 5px; display: grid; grid-template-columns: 1fr 1fr;">
                     <div>
                         <p style="margin: 0; font-size: 10px; color: #666;">TOMADOR DO SERVIÇO / CLIENTE</p>
                         <p style="margin: 0; font-weight: bold; font-size: 16px;">${nome.toUpperCase()}</p>
