--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="bg-white p-12 rounded-[40px] shadow-2xl w-[450px] text-center border-b-8 border-orange-600">
             <div class="v12-logo-3d inline-block mb-8">V12</div>
             <h2 class="text-3xl font-black text-slate-800 uppercase italic mb-2 tracking-tighter">Acesso de Autoridade</h2>
-            <p class="text-slate-400 text-xs font-bold mb-10 tracking-widest uppercase">P2 Hardware Authentication Required</p>
+            <p class="text-slate-400 text-xs font-bold mb-10 tracking-widest uppercase">P2 Hardware Authentication</p>
             
             <div class="space-y-4">
                 <input type="email" id="v12_email" placeholder="E-mail de Comando" class="input-tactical w-full">
@@ -155,7 +155,7 @@
                         </div>
                         <div>
                             <p class="text-[10px] font-black text-orange-400 uppercase tracking-widest">Alinhamento Estratégico</p>
-                            <p id="ai-insight" class="text-white text-xs font-medium italic">Análise de autoridade V12 iniciada.</p>
+                            <p id="ai-insight" class="text-white text-xs font-medium italic">Análise de autoridade iniciada.</p>
                         </div>
                     </div>
                     <div class="text-right">
@@ -279,8 +279,8 @@
                         </div>
                         <div class="terminal-log shadow-xl mt-4">
                             <div class="flex justify-between border-b border-white/5 pb-2 mb-3">
-                                <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI Advisor</span>
-                                <span class="text-[10px] text-slate-500 font-mono">NODE_ISR_V12</span>
+                                <span class="font-black text-[10px] uppercase tracking-[0.3em] text-orange-400">Gemini AI</span>
+                                <span class="text-[10px] text-slate-500 font-mono">IHVH</span>
                             </div>
                         </div>
                     </div>
