--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     <div class="flex items-center justify-between mb-10 border-b border-slate-100 pb-6">
                         <div class="flex items-center gap-4">
                             <div class="w-3 h-10 bg-orange-500 rounded-full shadow-lg shadow-orange-200"></div>
-                            <h2 class="text-xl font-black text-slate-700 uppercase italic">Central Operacional</h2>
+                            <h2 class="text-xl font-black text-slate-700 uppercase italic">Autenticação</h2>
                         </div>
                         <div class="flex gap-2">
                              <label class="bg-blue-600 text-white px-4 py-2 rounded-lg text-[10px] font-black uppercase tracking-widest hover:bg-blue-700 transition-colors cursor-pointer">
