--- a/index.html
+++ b/index.html
@@ -123,6 +123,22 @@
                 <button onclick="checkV12Auth()" class="btn-orange w-full text-white font-black py-5 rounded-2xl shadow-xl uppercase tracking-widest text-sm">Iniciar Sincronização</button>
                 <p class="text-[10px] text-slate-400 mt-4 cursor-pointer hover:text-orange-500 font-bold uppercase" onclick="solicitarCadastro()">Solicitar novo cadastro</p>
             </div>
+            <div id="admin-panel" style="display:none;" class="mt-8 p-4 bg-slate-900 border border-orange-500 rounded-xl shadow-2xl">
+    <h3 class="text-orange-500 font-bold mb-4 uppercase tracking-widest text-sm">Controle de Autoridade V12</h3>
+    <div class="overflow-x-auto">
+        <table class="w-full text-left text-[11px] text-slate-300">
+            <thead>
+                <tr class="border-b border-slate-700">
+                    <th class="py-2">E-MAIL</th>
+                    <th class="py-2">STATUS</th>
+                    <th class="py-2">AÇÃO</th>
+                </tr>
+            </thead>
+            <tbody id="user-list-table">
+                </tbody>
+        </table>
+    </div>
+</div>
         </div>
     </div>
 
