--- a/index.html
+++ b/index.html
@@ -330,9 +330,21 @@
 
         if(user) {
             if(user.status === "AUTHORIZED") {
+                // Esconde a tela de login
                 document.getElementById('auth-gate').style.display = 'none';
+                
                 addLog(`ACESSO AUTORIZADO: ${user.email.toUpperCase()}`);
                 generateAIInsight(`Sincronização via ${user.role} completa.`);
+
+                // NOVO: Se for ADMIN, mostra o painel de liberação
+                if (user.role === "ADMIN") {
+                    const painel = document.getElementById('admin-panel');
+                    if (painel) {
+                        painel.style.display = 'block'; // Torna o painel visível
+                        atualizarPainelAdmin();         // Preenche a tabela com os nomes
+                    }
+                }
+
             } else {
                 alert("ACESSO BLOQUEADO: Aguarde autorização do Administrador.");
             }
@@ -353,7 +365,60 @@
             addLog(`NOVA SOLICITAÇÃO: ${email}`);
         }
     }
+// --- CONTINUAÇÃO DA PARTE 3: GESTÃO DO ADMINISTRADOR ---
 
+// 4. FUNÇÃO PARA DESENHAR A LISTA NA TABELA
+function atualizarPainelAdmin() {
+    const tabela = document.getElementById('user-list-table');
+    if (!tabela) return;
+
+    tabela.innerHTML = ''; // Limpa a tabela antes de carregar os novos dados
+
+    v12_users.forEach((user) => {
+        // O administrador não aparece na própria lista de gestão
+        if (user.role === "ADMIN") return;
+
+        const corStatus = user.status === "AUTHORIZED" ? "text-green-400" : "text-yellow-500";
+        
+        tabela.innerHTML += `
+            <tr class="border-b border-slate-800">
+                <td class="py-2 px-1 text-[10px]">${user.email}</td>
+                <td class="py-2 px-1 text-[10px] ${corStatus} font-bold">${user.status}</td>
+                <td class="py-2 px-1 flex gap-2">
+                    <button onclick="autorizarAcessoV12('${user.email}')" class="bg-green-600 hover:bg-green-500 px-2 py-1 rounded text-white text-[9px] font-bold">AUTORIZAR</button>
+                    <button onclick="removerUsuarioV12('${user.email}')" class="bg-red-600 hover:bg-red-500 px-2 py-1 rounded text-white text-[9px] font-bold">REMOVER</button>
+                </td>
+            </tr>
+        `;
+    });
+}
+
+// 5. COMANDO PARA LIBERAR O ACESSO (Muda de PENDING para AUTHORIZED)
+function autorizarAcessoV12(email) {
+    const user = v12_users.find(u => u.email === email);
+    if (user) {
+        user.status = "AUTHORIZED";
+        salvarEAtualizarV12();
+        alert("SISTEMA: Acesso autorizado para " + email);
+        addLog(`AUTORIDADE: Liberado acesso para ${email}`);
+    }
+}
+
+// 6. COMANDO PARA DESCADASTRAR (Remove do Banco de Dados)
+function removerUsuarioV12(email) {
+    if (confirm("Deseja remover este usuário permanentemente?")) {
+        v12_users = v12_users.filter(u => u.email !== email);
+        salvarEAtualizarV12();
+        addLog(`HARDWARE PURGE: ${email} removido.`);
+    }
+}
+
+// 7. FUNÇÃO DE SALVAMENTO AUTOMÁTICO
+function salvarEAtualizarV12() {
+       localStorage.setItem('v12_database', JSON.stringify(v12_users));
+       atualizarPainelAdmin(); // Atualiza a tabela visualmente
+   }
+}
     function liberarUsuario(email) {
         let user = v12_users.find(u => u.email === email);
         if(user) {
